--- a/src/style.css
+++ b/src/style.css
@@ -159,3 +159,43 @@ body {
   position: absolute;
   transform: translate(-50%, -50%);
 }
+
+/* Reload Screen */
+
+#reload-screen {
+  position: absolute;
+  width: 100vw;
+  height: 100vh;
+  backdrop-filter: blur(2px);
+  display: none;
+
+  justify-content: center;
+  align-items: center;
+}
+
+#reload-screen.active {
+  display: flex;
+}
+
+.reload__text {
+  color: white;
+  font-size: 3rem;
+  font-weight: 700;
+}
+
+.reload_spinner {
+  width: 250px;
+  height: 250px;
+
+  animation: rotate 2s linear infinite;
+  transform-origin: center center;
+}
+
+@keyframes rotate {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
