--- a/src/style.css
+++ b/src/style.css
@@ -116,16 +116,11 @@ body {
   margin: 8px 0;
 }
 
-.rating {
-  display: flex;
-  justify-content: center;
-  margin: 8px 0;
-}
-
-.star {
-  color: #ffd700;
-  font-size: 18px;
-  margin: 0 2px;
+.level-text {
+  color: black;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  margin: 8px auto;
 }
 
 .price {
