Add mobile compatibility

--- a/src/style.css
+++ b/src/style.css
@@ -16,10 +16,12 @@ body {
   background-size: 100% 100%;
   background-position: center;
   background-repeat: no-repeat;
+  width: 100vw;
   height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
+  overflow: hidden;
 }
 
 /* Shop modal */
