--- a/src/style.css
+++ b/src/style.css
@@ -86,8 +86,10 @@ body {
 
 .modal__content {
   display: flex;
-  justify-content: center;
   gap: 20px;
+
+
+  overflow: auto;
 }
 
 /* Military shop item */
@@ -97,7 +99,6 @@ body {
   border: 1px solid #e0e0e0;
   border-radius: 8px;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-  width: 200px;
   padding: 16px;
   text-align: center;
 }
